Inferno Campaign - layout tweaks

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -38,8 +38,6 @@ This scenario plays out over 14 rounds.
   \item A Pack of Cerebri
 \end{itemize}
 
-% \vspace*{\fill}\columnbreak
-
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, City Hall, Citadel
 
 \textbf{Bonus:} Add a ``war machine'' of your choice to your hand.
@@ -150,8 +148,6 @@ Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attemptin
   \item The Enemy Rampart Charging Hero \#2 appears on the center field of the S4 Starting Map tile.
 \end{itemize}
 
-\columnbreak
-
 \textbf{\nth{10} Round:}
 \begin{itemize}
   \item The second armies will attack this round and next round. Prepare your defenses!
@@ -200,8 +196,9 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     and then walls will be attacked.
 \end{itemize}
 
-\vspace*{1em}
+\vspace*{\fill}
 \includegraphics[width=0.4\paperwidth, keepaspectratio]{\art/cerberi.png}
+\vspace*{\fill}
 
 \end{multicols*}
 
