--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -36,8 +36,6 @@ This scenario plays out over 16 rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling
 
-\vspace*{\fill}\columnbreak
-
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
   \item Add a Pack of Harpies to your hand.
@@ -67,8 +65,6 @@ This scenario plays out over 16 rounds.
 \textbf{Charging Heroes' Deck:} 2 × Might card, 2 × Magic card
 
 \textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\footnote{All the Charging Heroes' Enemies use the same AI and Spell decks. Reset them after every Combat.}.
-
-\vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{Map setup}}
 
@@ -193,8 +189,6 @@ You run out of time –- you have time till the end of the Round 16.
   \item Read: ``Congratulations! You captured Steadwick and are victorious!''
 \end{itemize}
 
-\columnbreak
-
 \subsection*{\MakeUppercase{Additional rules}}
 
 During this ``Inferno'' campaign scenario, the following rules apply:
@@ -215,6 +209,10 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     \item Obelisks give you 1 \svg{valuables} and function as a ``Castle
       Gate'' location (only if you have the ``Castle Gate'' built in your town).
 \end{itemize}
+
+\vspace*{\fill}
+\includegraphics[width=0.4\paperwidth, keepaspectratio]{\art/griffin.png}
+\vspace*{\fill}
 
 \end{multicols*}
 
