--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -298,7 +298,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{5. Kolo:}\n"
+"\\textbf{5. kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Získejte znovu výsledek jednoho pole s Černou Kostičkou.\n"
 "\\end{itemize}\n"
