--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -37,8 +37,6 @@ This scenario plays out over 13 rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, City Hall
 
-\vspace*{\fill}\columnbreak
-
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
   \item Add a ``Slayer'' spell to your hand
@@ -72,9 +70,6 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
   \item 1 × Inferno (S6)
   \item 1 × Rampart (S4)
 \end{itemize}
-
-\vspace*{\fill}
-\columnbreak
 
 \textbf{3 × Far (II--III) Map tile}
 \begin{itemize}
@@ -161,6 +156,10 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     \item The ``Castle Gate'' cannot be built.
     \item If your Hero visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.
 \end{itemize}
+
+\vspace*{\fill}
+\includegraphics[width=0.4\paperwidth, keepaspectratio]{\art/slayer.png}
+\vspace*{\fill}
 
 \end{multicols*}
 
