[CS] Inferno Campaign - Steadwick's Fall

--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -119,11 +119,11 @@ Queen Catherine Ironfist arrives at the end of the Round 16.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
-You lose one Combat encounter with your Main Hero (Surrender costs 10 gold, and does not count as a defeat).
+You lose one Combat encounter with your Main Hero (Surrender costs 10 \svg{gold}, and does not count as a defeat).
 
 You lose your Faction Town on the S6 Map Tile.
 
-You run out of time –- you have time till the end of the Round 16.
+You run out of time -- you have time till the end of the Round 16.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -167,7 +167,7 @@ You run out of time –- you have time till the end of the Round 16.
 
 \textbf{\nth{13} Round:}
 \begin{itemize}
-  \item Warning: ``Queen Catherine's march continues - her forces are just two weeks away. If you do not hurry,
+  \item Warning: ``Queen Catherine's march continues -- her forces are just two weeks away. If you do not hurry,
     we will not have time to secure the capital before her arrival.''
 \end{itemize}
 
