--- a/translations/inferno_steadwicks_fall.tex/fr.po
+++ b/translations/inferno_steadwicks_fall.tex/fr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 15:17+0200\n"
+"POT-Creation-Date: 2024-08-02 20:15+0200\n"
 "PO-Revision-Date: 2024-07-01 19:22+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -456,7 +456,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:123
 #, no-wrap
 msgid ""
-"You lose one Combat encounter with your Main Hero (Surrender costs 10 gold, and does not count as a defeat).\n"
+"You lose one Combat encounter with your Main Hero (Surrender costs 10 \\svg{gold}, and does not count as a defeat).\n"
 "\n"
 msgstr ""
 
@@ -472,7 +472,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:127
 #, no-wrap
 msgid ""
-"You run out of time –- you have time till the end of the Round 16.\n"
+"You run out of time -- you have time till the end of the Round 16.\n"
 "\n"
 msgstr ""
 
@@ -556,7 +556,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{13} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item Warning: ``Queen Catherine's march continues - her forces are just two weeks away. If you do not hurry,\n"
+"  \\item Warning: ``Queen Catherine's march continues -- her forces are just two weeks away. If you do not hurry,\n"
 "    we will not have time to secure the capital before her arrival.''\n"
 "\\end{itemize}\n"
 "\n"
