--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 15:17+0200\n"
+"POT-Creation-Date: 2024-08-02 20:37+0200\n"
 "PO-Revision-Date: 2024-07-04 10:47+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -315,7 +315,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armia Złotych Smoków:} Grupa Złotych Smoków, Grupa Jednorożców, Grupa Drzewców, Grupa Centaurów\n"
-"  \\item \\textbf{Armia Ivora:} Garstka Elfów\\footnote{W Rundzie 9, Garstka Elfów w Armii Ivara zostaje wzmocniona do Grupy.}, Neutralna Armia na tym samym poziomie co poziom Twojego Bohatera\\footnote{Zob. str. 35, ,,Tabela Trudności Pola'' w Księdze Zasad, aby uzyskać dalsze szczegóły na temat liczby Jednostek Neutralnych, które musisz dobrać dla tej Neutralnej Armii.}\n"
+"  \\item \\textbf{Armia Ivora:} Garstka Elfów\\footnote{W Rundzie 9, Garstka Elfów w Armii Ivara zostaje wzmocniona do Grupy.}, Neutralna Armia na poziomie twojego Bohatera\\footnote{Zob. str. 35, ,,Tabela Trudności Pola'' w Księdze Zasad, aby uzyskać dalsze szczegóły na temat liczby Jednostek Neutralnych, które musisz dobrać dla tej Neutralnej Armii.}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -333,10 +333,10 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:61
 #, no-wrap
 msgid ""
-"\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first ranged unit able to make a ranged attack), 1 × Magic Arrow Spell card\n"
+"\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Zaklęć Ivora:} 1 × Precyzja (działa na pierwszą jednostkę dystansową zdolną do wykonania ataku dystansowego), 1 × Magiczna Strzała\n"
+"\\textbf{Talia Zaklęć Ivora:} 1 × Precyzja (działa na pierwszą jednostkę \\svg{unit_ranged} zdolną do wykonania ataku \\svg{unit_ranged}), 1 × Magiczna Strzała\n"
 "\n"
 
 #. type: multicols*
@@ -392,7 +392,7 @@ msgid ""
 msgstr ""
 "\\textbf{3 × Daleki (II--III) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item \\mbox{2 × Inferno (wybierz spośród: F16--F18, \\#F10)}\n"
+"  \\item 2 × Inferno (wybierz spośród: F16--F18, \\#F10)\n"
 "  \\item 1 × Bastion (wybierz spośród: F10--F12)\n"
 "\\end{itemize}\n"
 "\n"
@@ -423,7 +423,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{1 × Centralny (VI--VII) Kafelek Mapy}\n"
+"\\columnbreak\\textbf{1 × Centralny (VI--VII) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Centralny Kafelek ze Smoczą Utopią (C1)\n"
 "\\end{itemize}\n"
@@ -449,8 +449,8 @@ msgid ""
 "and appears in the center field of the S4 Starting Map tile.\n"
 "\n"
 msgstr ""
-"Wrogi Bohater jest reprezentowany przez dowolną figurkę Bohatera frakcji Bastion\n"
-"i pojawia się w środkowym polu Początkowego Kafelka Mapy S4.\n"
+"Wrogi Bohater jest reprezentowany przez dowolną figurkę Bohatera Bastionu\n"
+"i pojawia się w środkowym polu Początkowego Kafelka S4.\n"
 "\n"
 
 #. type: multicols*
@@ -530,8 +530,8 @@ msgid ""
 msgstr ""
 "\\textbf{2. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj: ,,Złota Królowa Smoków jest potężnym sojusznikiem AvLee.\n"
-"    Musisz znaleźć jej legowisko i doprowadzić do jej zguby, ponieważ to znacznie osłabi\n"
+"  \\item Przeczytaj: ,,Królowa Złotych Smoków to potężny sojusznik AvLee.\n"
+"    Musisz znaleźć jej legowisko i doprowadzić do jej zguby, bo to znacznie osłabi\n"
 "    elfy i sprawi, że staną się mniejszym zagrożeniem dla naszych planów zniszczenia Erathii.\n"
 "    Idź teraz i spraw, abyśmy byli dumni!''\n"
 "\\end{itemize}\n"
@@ -548,10 +548,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. runda:}\n"
+"\\textbf{9. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Garstka Elfów z Armii Ivora zostaje Wzmocniona do Grupy Elfów.\n"
-"    Armia Ivora zyskuje również Wózek na Amunicję.\n"
+"    Armia Ivora zyskuje również Wóz z Amunicją.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -565,9 +565,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{10. runda:}\n"
+"\\textbf{10. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Miasto Fakcji Bastion, w którym znajduje się Armia Ivora, otrzymuje Wieżę Łuczniczą.\n"
+"  \\item Miasto Bastionu, w którym znajduje się Armia Ivora, otrzymuje Wieżę Łuczniczą.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -581,7 +581,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{13. runda:}\n"
+"\\textbf{13. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Na koniec rundy, jeśli nie zostaną pokonani Wrogi Bohater i Armie Złotych Smoków, wszystko stracone -- przegrywasz!\n"
 "\\end{itemize}\n"
