--- a/translations/inferno_steadwicks_fall.tex/pl.po
+++ b/translations/inferno_steadwicks_fall.tex/pl.po
@@ -617,7 +617,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 1.}\n"
+"\\textbf{1. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Przeczytaj: ,,Gratulacje za dotychczasowy postęp.\n"
 "    Zniszczyłeś Wschodnią Erathię i jesteś teraz w zasięgu uderzenia od stolicy Erathii\n"
@@ -636,7 +636,7 @@ msgid ""
 "    garrisons before she arrives.\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 2.}\n"
+"\\textbf{2. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Przeczytaj: ,,Nie tylko Bracada i AvLee wysłały posiłki, ale otrzymaliśmy wiadomości, że\n"
 "    Królowa Katarzyna Ironfist prowadzi znaczną armię z południa. Musimy kontrolować stolicę i jej\n"
@@ -671,7 +671,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 5.:}\n"
+"\\textbf{5. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Przeczytaj: ,,Otrzymujesz raport z południa. Siły Królowej Katarzyny zostały wystarczająco opóźnione,\n"
 "    co daje ci przynajmniej dwa miesiące więcej na dotarcie do stolicy, ale nasze własne siły poniosły znaczne\n"
@@ -690,7 +690,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 10.:}\n"
+"\\textbf{10. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item W przypadku każdej niepokonanej Osady Wroga (F3, F10, \\#F1) na początku tej rundy pojawia się dodatkowy\n"
 "    Szarżujący Bohater Wroga danej frakcji na każdej Osadzie.\n"
@@ -709,7 +709,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 11.:}\n"
+"\\textbf{11. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Przeczytaj: ,,Otrzymujesz raport z południa. Nasze siły nadal rzucają się na drogę armii Katarzyny,\n"
 "    ale ona nadal marszuje na północ. Masz najwyżej trzy lub cztery tygodnie, zanim dotrze do stolicy.''\n"
@@ -745,7 +745,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 15.:}\n"
+"\\textbf{15. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Ostrzeżenie: ,,Twoi zwiadowcy zgłaszają widok armii Katarzyny siedem dni na południowy zachód. Jeśli\n"
 "    dotrze do stolicy przed tobą, wszystko jest stracone.''\n"
@@ -764,7 +764,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 16.:}\n"
+"\\textbf{16. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Jeśli Steadwick nie zostało zdobyte, przeczytaj: ,,Dziś rano ogromna armia pod dowództwem Katarzyny\n"
 "    Ironfist dotarła do erackiej stolicy Steadwick. Nie mamy innego wyboru, jak tylko wycofać nasze siły.\n"
