--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -57,7 +57,7 @@ This scenario plays out over 13 rounds.
 
 \textbf{Ivor's Deck:} 1 × Might card, 2 × Magic card, 1 × Skill card
 
-\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first ranged unit able to make a ranged attack), 1 × Magic Arrow Spell card
+\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \svg{unit_ranged} unit able to make a \svg{unit_ranged} attack), 1 × Magic Arrow Spell card
 
 \textbf{Ivor's Skill:} Archery Ability card (it always resolves its Basic effect)
 
