--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -580,7 +580,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 1.:}\n"
+"\\textbf{1. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Przeczytaj: ,,Królowa Katarzyna Ironfist odrzuca nasze żądanie okupu i gromadzi armie do operacji ratunkowej.\n"
 "    Klanie Kreelah, przygotuj nasze obrony! Chroń Klessive za wszelką cenę. Mamy przewagę.''\n"
@@ -599,7 +599,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 2.:}\n"
+"\\textbf{2. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Przeczytaj: ,,Armie Zamku i AvLee będą wkrótce u naszych bram. Muszą przejść przez wulkaniczny korytarz\n"
 "    na wschodzie. Nie możemy stawać z nimi do walki w polu, musimy bronić się wewnątrz Klessive, gdzie\n"
@@ -618,7 +618,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 3.:}\n"
+"\\textbf{3. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Przeczytaj: ,,Nasi zwiadowcy zgłosili, że wróg zdobył 2 bardzo potężne artefakty z pomocą lokalnych pustelników. Są głupcami, jeśli myślą, że pomogą im one pokonać naszą kreęgańską fortecę.''\n"
 "\\end{itemize}\n"
@@ -634,7 +634,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 4.:}\n"
+"\\textbf{4. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Pierwsze armie zaatakują w tej rundzie i w następnej. Przygotować nasze obrony!\n"
 "\\end{itemize}\n"
@@ -651,7 +651,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 7.:}\n"
+"\\textbf{7. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Szarżująca Armia Zamku \\#2 pojawia się na polu Osady kafelka F3 albo na środkowym polu Początkowego Kafelka Mapy S3 (twój wybór).\n"
 "  \\item Szarżująca Armia Bastionu \\#2 pojawia się na środkowym polu Początkowego Kafelka Mapy S4.\n"
@@ -668,7 +668,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 10.:}\n"
+"\\textbf{10. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Kolejne armie zaatakują w tej i następnej rundzie. Przygotować nasze obrony!\n"
 "\\end{itemize}\n"
@@ -684,7 +684,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 12.:}\n"
+"\\textbf{12. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Ostatnia Szarżująca Armia pojawia się Osadzie Kafelka F3. Ta armia ma 4 PR na turę.\n"
 "\\end{itemize}\n"
@@ -700,7 +700,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 16.:}\n"
+"\\textbf{16. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Ostatnia Szarżująca Armia zaatakuje w tej rundzie. Musimy bronić Kleesive za wszelką cenę!\n"
 "\\end{itemize}\n"
