Inferno Campaign - layout tweaks (#83)
Co-authored-by: Andrzej Wiącek <andrzej.wiacek@qwrtln.nl>

--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -37,8 +37,6 @@ This scenario plays out over 13 rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, City Hall
 
-\vspace*{\fill}\columnbreak
-
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
   \item Add a ``Slayer'' spell to your hand
@@ -59,7 +57,7 @@ This scenario plays out over 13 rounds.
 
 \textbf{Ivor's Deck:} 1 × Might card, 2 × Magic card, 1 × Skill card
 
-\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first ranged unit able to make a ranged attack), 1 × Magic Arrow Spell card
+\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \svg{unit_ranged} unit able to make a \svg{unit_ranged} attack), 1 × Magic Arrow Spell card
 
 \textbf{Ivor's Skill:} Archery Ability card (it always resolves its Basic effect)
 
@@ -72,9 +70,6 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
   \item 1 × Inferno (S6)
   \item 1 × Rampart (S4)
 \end{itemize}
-
-\vspace*{\fill}
-\columnbreak
 
 \textbf{3 × Far (II--III) Map tile}
 \begin{itemize}
@@ -161,6 +156,10 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     \item The ``Castle Gate'' cannot be built.
     \item If your Hero visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.
 \end{itemize}
+
+\vspace*{\fill}
+\includegraphics[width=0.4\paperwidth, keepaspectratio]{\art/slayer.png}
+\vspace*{\fill}
 
 \end{multicols*}
 
